--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="normal">Normal</string>
     <string name="over">Overweight</string>
     <string name="should"><![CDATA[BMI should be > 16.0]]></string>
+    <string name="home">Home</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="profile">Profile</string>
+    <string name="store">Store</string>
+    <string name="running_app">Running App</string>
 </resources>
