--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="log_in">Log In</string>
     <string name="valid_mail">Enter your email</string>
     <string name="valid_password">Enter correct password</string>
+    <string name="error">Error</string>
 </resources>
