--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non arcu vitae leo tincidunt dictum at at risus. Integer et tincidunt est. Sed eu ipsum sem. Aliquam nec elementum lacus. Aenean quis varius nibh. Sed id ornare nunc. Morbi sagittis ultricies felis id malesuada. Nam molestie quis est eget malesuada.
 
 Suspendisse euismod arcu ac nisi molestie, iaculis malesuada nisl aliquet. Mauris hendrerit tincidunt arcu, vitae vestibulum metus ultricies ac. Morbi feugiat ullamcorper neque et tempus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus sed cursus nunc. Morbi porttitor egestas odio, in pharetra ipsum tincidunt quis. Nunc id convallis ligula. Sed feugiat justo at lacus vehicula sollicitudin eu sit amet mauris. Integer ullamcorper lectus erat, sed vulputate turpis volutpat tristique. Nulla ornare ullamcorper pellentesque. Cras condimentum neque in sem viverra ornare. Suspendisse sit amet iaculis augue. Quisque pulvinar, ex vitae venenatis molestie, sapien eros fringilla ligula, nec dignissim augue ligula in felis.</string>
+    <string name="order">order</string>
+    <string name="_16000">16000 $</string>
+    <string name="nike_air_force_1">NIKE Air Force 1</string>
 </resources>
