--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TBC_Final</string>
+    <string name="app_name">FitTracker</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="steps">Steps</string>
@@ -68,4 +68,10 @@ Suspendisse euismod arcu ac nisi molestie, iaculis malesuada nisl aliquet. Mauri
     <string name="_16000">16000 $</string>
     <string name="nike_air_force_1">NIKE Air Force 1</string>
     <string name="favorites">Favorites</string>
+    <string name="today">Today</string>
+    <string name="current_session">Current Session</string>
+    <string name="welcome_to_nfittracker">Welcome to \nFitTracker</string>
+    <string name="example_example_com">example@example.com</string>
+    <string name="log_out">Log Out</string>
+    <string name="ibm">IBM Calculator</string>
 </resources>
