--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">FitTracker</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="steps">Steps</string>
     <string name="service_error">Service Error</string>
